# arborvia

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
claudedocs/: EdgeRoutingService_Architecture_Analysis.md
cmake/: ArborviaCommon.cmake  ArborviaCore.cmake  ArborviaExport.cmake  ArborviaLayout.cmake
docs/KR/: ARCHITECTURE.md  ARCHITECTURE_KR.md
docs/ko/: ARCHITECTURE.md
examples/: drag_test.cpp
examples/drag_demo/: main.cpp
examples/interactive/: main.cpp
examples/interactive_demo/: AsyncOptimizer.cpp  AsyncOptimizer.h  CommandServer.h  DemoColors.h  DemoCommandProcessor.cpp  DemoCommandProcessor.h  DemoInputHandler.cpp  DemoInputHandler.h  DemoRenderer.cpp  DemoRenderer.h  DemoState.h  DemoUIPanel.cpp  DemoUIPanel.h  LogCapture.h  SCXMLManager.cpp  SCXMLManager.h  main.cpp
examples/visual_demo/: main.cpp
include/arborvia/: arborvia.h
include/arborvia/backends/: DefaultBackend.h  SpdlogBackend.h
include/arborvia/common/: ILoggerBackend.h  Logger.h
include/arborvia/core/: CompoundGraph.h  GeometryUtils.h  Graph.h  TaskExecutor.h  Types.h
include/arborvia/export/: IExporter.h  SvgExport.h
include/arborvia/layout/: BuiltinPenalties.h  ConstraintConfig.h  ConstraintManager.h  EdgeConstraintManager.h  EdgeNudger.h  EdgeValidityConstraint.h  ICoordinateAssignment.h  ICrossingMinimization.h  ICycleRemoval.h  IDragConstraint.h  IEdgeConstraint.h  IEdgeOptimizer.h  IEdgeOptimizerFactory.h  IEdgePenalty.h  ILayerAssignment.h  ILayout.h  IObstacleProvider.h  IPathFinder.h  LayoutEnums.h  LayoutOptions.h  LayoutResult.h  LayoutSerializer.h  LayoutTypes.h  LayoutUtils.h  ManualLayoutManager.h  ManualLayoutState.h  MinDistanceConstraint.h  OptimizerConfig.h  OptimizerRegistry.h  OrthogonalRouter.h  PathRoutingCoordinator.h  SugiyamaLayout.h  ValidRegionCalculator.h
resources/scxml/: index.json
scripts/: check-no-cout.sh
src/backends/: DefaultBackend.cpp  SpdlogBackend.cpp
src/common/: Logger.cpp
src/core/: CompoundGraph.cpp  GeometryUtils.cpp  Graph.cpp
src/export/: SvgExport.cpp
src/layout/: BuiltinPenalties.cpp  ConstraintConfig.cpp  ConstraintManager.cpp  EdgeNudger.cpp  EdgePenaltyConfig.cpp  EdgePenaltySystem.cpp  LayoutResult.cpp  LayoutSerializer.cpp  LayoutUtils.cpp  ManualLayoutManager.cpp  OptimizerConfig.cpp  OptimizerRegistry.cpp  OrthogonalRouter.cpp  PathRoutingCoordinator.cpp  SugiyamaLayout.cpp  ValidRegionCalculator.cpp
src/layout/api/: EdgeLayoutResolver.cpp  EdgeRoutingService.cpp  LayoutController.cpp
src/layout/constraints/: BoundaryConstraint.cpp  BoundaryConstraint.h  ConstraintGateway.cpp  ConstraintRegistry.cpp  ConstraintSolver.cpp  ConstraintViolation.cpp  DirectionAwareMarginConstraint.cpp  DirectionAwareMarginConstraint.h  EdgePathValidityConstraint.cpp  EdgePathValidityConstraint.h  EdgeValidityConstraint.cpp  MinDistanceConstraint.cpp  MinDistanceConstraint.h  NoOverlapConstraint.cpp  NoOverlapConstraint.h  PositionFinder.cpp  SegmentObstacleProvider.cpp
src/layout/interactive/: ConstraintManager.cpp  ConstraintManager.h  DragOptimizationHandler.cpp  DragOptimizationHandler.h  ManualLayoutManager.cpp  PathRoutingCoordinator.cpp  SnapPointController.cpp  UserLayoutController.cpp  ValidRegionCalculator.cpp  ValidRegionCalculator.h
src/layout/optimization/: BuiltinPenalties.cpp  BuiltinPenalties.h  EdgePenaltySystem.cpp  OptimizerConfig.cpp  OptimizerRegistry.cpp  OptimizerRegistry.h
src/layout/pathfinding/: AStarPathCalculator.cpp  AStarPathCalculator.h  AStarPathFinder.cpp  AStarPathFinder.h  CompositePathCalculator.cpp  CompositePathCalculator.h  LShapedPathFinder.cpp  LShapedPathFinder.h  ObstacleMap.cpp  ObstacleMap.h  SelfLoopPathCalculator.cpp  SelfLoopPathCalculator.h
src/layout/routing/: CooperativeRerouter.cpp  CooperativeRerouter.h  EdgeNudger.cpp  EdgeNudger.h  OrthogonalRouter.cpp  OrthogonalRouter.h  UnifiedRetryChain.cpp  UnifiedRetryChain.h
src/layout/snap/: GridCoordinates.h  GridSnapCalculator.cpp  GridSnapCalculator.h  SnapDistributor.cpp  SnapDistributor.h  SnapIndexManager.cpp  SnapIndexManager.h  SnapPointCalculator.cpp  SnapPointCalculator.h  SnapPositionUpdater.cpp  SnapPositionUpdater.h
src/layout/sugiyama/: AStarEdgeOptimizer.cpp  AStarEdgeOptimizer.h  AStarOptimizerFactory.cpp  AStarOptimizerFactory.h  AStarPathFinder.cpp  AStarPathFinder.h  AStarRetrySystem.cpp  AStarRetrySystem.h  ChannelRouter.cpp  ChannelRouter.h  CoordinateAssignment.cpp  CoordinateAssignment.h  CrossingMinimization.cpp  CrossingMinimization.h  CycleRemoval.cpp  CycleRemoval.h  DragOptimizationHandler.cpp  DragOptimizationHandler.h  EdgeConstraintManager.cpp  EdgePathFixer.cpp  EdgePathFixer.h  EdgeRouting.cpp  EdgeRouting.h  EdgeRoutingUtils.h  EdgeScorer.cpp  EdgeScorer.h  EdgeValidator.h  GeometricEdgeOptimizer.cpp  GeometricEdgeOptimizer.h  GeometricOptimizerFactory.h  GridCoordinates.h  GridSnapCalculator.cpp  GridSnapCalculator.h  LShapedPathFinder.cpp  LShapedPathFinder.h  LayerAssignment.cpp  LayerAssignment.h  ObstacleMap.cpp  ObstacleMap.h  PathCalculator.cpp  (+19 more)
tests/benchmarks/: AsyncOptimizationBenchmark.cpp  CMakeLists.txt
tests/core/: CompoundGraphTest.cpp  GraphTest.cpp
tests/export/: SvgExportTest.cpp
tests/infrastructure/scxml/: SCXMLConverter.cpp  SCXMLConverter.h  SCXMLConverterTest.cpp  SCXMLGraph.cpp  SCXMLGraph.h  SCXMLTestLoader.cpp  SCXMLTestLoader.h  SCXMLTypes.h
tests/integration/: DemoApiTest.cpp  DiagonalReproductionTest.cpp  SnapCollisionReproductionTest.cpp
tests/interactive/: DragBehaviorTest.cpp
tests/layout/: LayoutResultTest.cpp  LayoutUtilsTest.cpp  ManualLayoutTest.cpp  OrthogonalityConstraintTest.cpp  PointNodeRoutingTest.cpp  SnapPointControllerTest.cpp  SugiyamaLayoutTest.cpp  ValidRegionCalculatorTest.cpp
tests/layout/manual/: BendPointTest.cpp  OrthogonalDragTest.cpp
tests/layout/pathfinding/: ObstacleMapTest.cpp
tests/layout/routing/: CooperativeRerouterTest.cpp
tests/layout/sugiyama/: EdgeOptimizerTest.cpp  EdgeRoutingTransitionTest.cpp  GridSnapCalculatorTest.cpp  SnapIndexManagerTest.cpp  SnapPointOverlapTest.cpp
(+89 files in other folders)
